feat: update project menu text

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -809,6 +809,7 @@
     "Add Followers": "添加关注人",
     "After the use case is selected, the batch operation can be performed.": "选中用例后，才能进行批量操作",
     "An Action with the same name exists.": "存在同名 Action!",
+    "App Center": "应用中心",
     "Applications release list top desc": "应用制品依赖于 pipeline 流水线中 release action 生成。release action 中填写了符合[版本号语义]的 tag_version 时，使用该 tag_version 作为制品版本名称；或基于 release/* 分支构建制品，且分支名称的基础部分符[版本号语义]时，使用分支名称的基础部分生成制品版本名称，如 release/1.1.3 分支构建的制品的版本名称为 1.1.3+20220101150405.",
     "Are you sure to delete in batches?": "确定批量删除吗？",
     "Are you sure to disinclude {name}": "确认与 {name} 解除包含关系吗",
@@ -829,6 +830,7 @@
     "Did not join any app, was invited to join or create app": "没有加入任何应用，被邀请加入或创建应用",
     "Did not join any project, was invited to join project or create project": "没有加入任何项目，被邀请加入项目或创建项目",
     "DingTalk notification address": "钉钉通知地址",
+    "Environments": "环境部署",
     "EstimateTime": "预估时间",
     "For artifact deployment environment, see Project Settings - Branch Rules.": "制品可部署环境请查看：项目设置-分支规则",
     "For example, what other components are depended on, and what circumstances are not covered, etc.": "比如依赖什么其他组件，有什么情况没有覆盖到 等等",
@@ -1195,7 +1197,6 @@
     "denied": "拒绝",
     "deploy global variables": "部署全局变量",
     "deploy succeeded applications count / applications count": "部署成功应用数 / 应用总数",
-    "deployment center": "部署中心",
     "deployment details": "部署详情页",
     "deployment environment": "部署环境",
     "deployment failed": "部署失败",
@@ -1361,7 +1362,6 @@
     "input ticket name": "请输入工单名称",
     "inputs configuration": "入参表单配置",
     "inputs form": "入参表单",
-    "integrated deployment": "集成部署",
     "integration testing": "集成测试",
     "interface": "接口",
     "interface document in user center": "用户中心接口文档",
