--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -809,6 +809,7 @@
     "Add Followers": "Add Followers",
     "After the use case is selected, the batch operation can be performed.": "After the use case is selected, the batch operation can be performed.",
     "An Action with the same name exists.": "An Action with the same name exists.",
+    "App Center": "App Center",
     "Applications release list top desc": "Application artifacts rely on release Action generation in the pipeline pipeline. When a tag version matching [version number semantics] is filled in the Release Action, that tag version is used as the product version name; Or build artifacts based on the Release /* branch, and the base part of the branch name [version number semantics], use the base part of the branch name to generate the version name of the artifact, such as release/1.1.3 build artifacts with version name 1.1.3+20220101150405.",
     "Are you sure to delete in batches?": "Are you sure to delete in batch?",
     "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
@@ -829,6 +830,7 @@
     "Did not join any app, was invited to join or create app": "Did not join any app, was invited to join or create app",
     "Did not join any project, was invited to join project or create project": "Did not join any project, was invited to join project or create project",
     "DingTalk notification address": "DingTalk notification address",
+    "Environments": "Environments",
     "EstimateTime": "EstimateTime",
     "For artifact deployment environment, see Project Settings - Branch Rules.": "releaseId which can be deployed in the environment, please check: project settings - branch rules",
     "For example, what other components are depended on, and what circumstances are not covered, etc.": "For example, what other components depend on, what is not covered, etc",
@@ -1195,7 +1197,6 @@
     "denied": "denied",
     "deploy global variables": "deploy global variables",
     "deploy succeeded applications count / applications count": "deploy succeeded applications count / applications count",
-    "deployment center": "deployments",
     "deployment details": "deployment details",
     "deployment environment": "deployment environment",
     "deployment failed": "deployment failed",
@@ -1361,7 +1362,6 @@
     "input ticket name": "input ticket name",
     "inputs configuration": "inputs configuration",
     "inputs form": "inputs form",
-    "integrated deployment": "integrated deployment",
     "integration testing": "integration testing",
     "interface": "interface",
     "interface document in user center": "interface document in user center",
