fix: pipeline input and output i18n style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1360,6 +1360,7 @@
     "input step": "input step",
     "input task name": "input task name",
     "input ticket name": "input ticket name",
+    "inputs": "inputs",
     "inputs configuration": "inputs configuration",
     "inputs form": "inputs form",
     "integration testing": "integration testing",
@@ -1528,7 +1529,7 @@
     "organize notification groups to set up notifications": "organize notification groups to set up notifications",
     "output parameter": "output parameter",
     "output parameter name": "output parameter name",
-    "outputs configuration": "outputs configuration",
+    "outputs": "outputs",
     "outputs form": "outputs form",
     "overall score": "overall score",
     "owned application": "owned application",
@@ -1547,7 +1548,6 @@
     "parameter name": "parameter name",
     "parameter value": "parameter value",
     "parameter value (required)": "parameter value (required)",
-    "params configuration": "params configuration",
     "participant": "participant",
     "pass": "pass",
     "passing rate": "passing rate",
