fix: locale in english mode

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1315,6 +1315,7 @@
     "input step": "输入步骤",
     "input task name": "请输入任务名称",
     "input ticket name": "请输入工单名称",
+    "inputs": "入参配置",
     "inputs configuration": "入参表单配置",
     "inputs form": "入参表单",
     "integration testing": "集成测试",
@@ -1479,7 +1480,7 @@
     "organize notification groups to set up notifications": "组织好通知群组以便设置通知",
     "output parameter": "出参",
     "output parameter name": "出参名",
-    "outputs configuration": "出参配置",
+    "outputs": "出参配置",
     "outputs form": "出参表单",
     "overall score": "总评得分",
     "owned application": "所属应用",
@@ -1497,7 +1498,6 @@
     "parameter name": "参数名",
     "parameter value": "参数值",
     "parameter value (required)": "参数值(必填)",
-    "params configuration": "入参配置",
     "participant": "参与人",
     "pass": "通过",
     "passing rate": "通过率",
