fix: update deploy upload file tip (#2838)
* fix: update deploy upload file tip

* chore: update local files

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1195,6 +1195,7 @@
     "denied": "denied",
     "deploy global variables": "deploy global variables",
     "deploy succeeded applications count / applications count": "deploy succeeded applications count / applications count",
+    "deploy-upload-file-tip": "The file is stored in the /init-data directory of the container. The file name is the configured Key value. The content of the file is the uploaded file",
     "deployment details": "deployment details",
     "deployment environment": "deployment environment",
     "deployment failed": "deployment failed",
