feat: code optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -940,6 +940,7 @@
     "addon info": "addon info",
     "addon setting": "addon setting",
     "address": "address",
+    "aggregate by branch": "aggregate by branch",
     "all": "all",
     "all issues": "all issues",
     "all iterations": "all iterations",
