--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -940,6 +940,7 @@
     "addon info": "服务信息",
     "addon setting": "服务设置",
     "address": "地址",
+    "aggregate by branch": "按分支聚合",
     "all": "全部",
     "all issues": "全部事项",
     "all iterations": "所有迭代",
