feat(msp): update MarkdownPreview
feat(msp): add event detail

feat(msp): add event detail

--- a/locales/en.json
+++ b/locales/en.json
@@ -202,6 +202,7 @@
     "advanced settings": "advanced settings",
     "agree": "agree",
     "alarm data report": "alarm data report",
+    "alarm overview": "alarm overview",
     "alarm record": "alarm record",
     "alarm statistics": "alarms",
     "alarm strategy": "alarm strategy",
