--- a/locales/zh.json
+++ b/locales/zh.json
@@ -202,6 +202,7 @@
     "advanced settings": "高级设置",
     "agree": "同意",
     "alarm data report": "告警数据报表",
+    "alarm overview": "告警总览",
     "alarm record": "告警列表",
     "alarm statistics": "告警统计",
     "alarm strategy": "告警策略",
