feat: refactor import export in issue/test case

--- a/locales/en.json
+++ b/locales/en.json
@@ -755,6 +755,7 @@
     "reason for rejection": "reason for rejection",
     "recent import and export records": "recent import and export records",
     "recertification": "recertification",
+    "record": "record",
     "recover template": "recover template",
     "reference API": "reference API",
     "refresh": "refresh",
