--- a/locales/zh.json
+++ b/locales/zh.json
@@ -755,6 +755,7 @@
     "reason for rejection": "拒绝原因",
     "recent import and export records": "最近的导入导出记录",
     "recertification": "重新认证",
+    "record": "记录",
     "recover template": "恢复模板",
     "reference API": "引用 API",
     "refresh": "刷新",
