--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1273,9 +1273,14 @@
     "existence": "existence",
     "existing application": "existing application",
     "expand file": "expand file",
+    "export/import": "export/import",
+    "export all": "export all",
+    "export all data": "export all data",
+    "export by filter condition": "export by filter condition",
     "export Excel": "export Excel",
     "export Xmind": "export Xmind",
     "export report": "export report",
+    "export the data of the filter conditions": "export the data of the filter conditions",
     "exporting": "exporting",
     "exposed port": "exposed port",
     "external api": "external api",
@@ -1783,6 +1788,7 @@
     "start date": "start date",
     "start deploy": "start deploy",
     "start executing the build": "start executing the build",
+    "start exporting, please view detail in records": "start exporting, please view detail in records",
     "start importing, please view detail in records": "start importing, please view detail in records",
     "start interface test": "start interface test",
     "start performing interface testing, please wait": "start performing interface testing, please wait",
