--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1273,9 +1273,14 @@
     "existence": "存在",
     "existing application": "已有应用",
     "expand file": "展开文件",
+    "export/import": "导入/导出",
+    "export all": "全部导出",
+    "export all data": "将全部数据进行导出",
+    "export by filter condition": "按筛选条件导出",
     "export Excel": "导出Excel",
     "export Xmind": "导出Xmind",
     "export report": "导出报告",
+    "export the data of the filter conditions": "将筛选器过滤条件后的数据进行导出",
     "exporting": "正在导出",
     "exposed port": "暴露端口",
     "external api": "外部API",
@@ -1783,6 +1788,7 @@
     "start date": "开始日期",
     "start deploy": "开始部署",
     "start executing the build": "开始执行构建",
+    "start exporting, please view detail in records": "开始导出，请在记录中查看详细信息",
     "start importing, please view detail in records": "开始导入，请在记录中查看详细信息",
     "start interface test": "执行接口测试",
     "start performing interface testing, please wait": "开始执行接口测试，请稍后",
