fix(common): change Chinese translation of backlog

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1009,7 +1009,7 @@
     "auto test": "自动化测试",
     "auto-push-after-relate": "关联发布内容后，将自动推送版本到该内容",
     "automatic test report": "自动化测试报告",
-    "backlog": "待处理",
+    "backlog": "待规划",
     "backup": "备份",
     "based on source": "基于源",
     "basic edition": "基础版",
