fix: fix comment

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1273,7 +1273,7 @@
     "existence": "存在",
     "existing application": "已有应用",
     "expand file": "展开文件",
-    "export/import": "导入/导出",
+    "export/import": "导出/导入",
     "export all": "全部导出",
     "export all data": "将全部数据进行导出",
     "export by filter condition": "按筛选条件导出",
