--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -86,6 +86,7 @@
     "Memory quota": "Memory quota",
     "Memory quota usage": "Memory quota usage",
     "Memory usage": "Memory usage",
+    "Monitor": "Monitor",
     "Monitor Project": "Monitor Project",
     "Monthly": "Monthly",
     "MySQL Erda database": "MySQL Erda database",
@@ -1130,7 +1131,6 @@
     "confirm to delete Runtime": "confirm to delete Runtime",
     "confirm to delete configuration": "confirm to delete configuration",
     "confirm to delete?": "confirm to delete?",
-    "confirm to export": "confirm to export",
     "confirm to remove the quote?": "confirm to remove the quote?",
     "connect to Coding": "connect to Coding",
     "connect to {type}": "connect to {type}",
@@ -1220,7 +1220,6 @@
     "document is illegal": "document is illegal",
     "does not belong to": "does not belong to",
     "does not contain": "does not contain",
-    "download failed file": "download failed file",
     "download tar.gz": "download tar.gz",
     "download template": "download template",
     "download zip": "download zip",
@@ -1273,14 +1272,14 @@
     "existence": "existence",
     "existing application": "existing application",
     "expand file": "expand file",
-    "export/import": "export/import",
+    "export Excel": "export Excel",
+    "export Xmind": "export Xmind",
     "export all": "export all",
     "export all data": "export all data",
     "export by filter condition": "export by filter condition",
-    "export Excel": "export Excel",
-    "export Xmind": "export Xmind",
     "export report": "export report",
     "export the data of the filter conditions": "export the data of the filter conditions",
+    "export/import": "export/import",
     "exporting": "exporting",
     "exposed port": "exposed port",
     "external api": "external api",
@@ -1310,7 +1309,6 @@
     "filter by data source name": "filter by data source name",
     "filter by priority": "filter by priority",
     "filter condition": "filter condition",
-    "filter criteria are not saved": "filter criteria are not saved",
     "filter name": "filter name",
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
@@ -1343,14 +1341,9 @@
     "image name": "image name",
     "image processing": "image processing",
     "images list": "images list",
-    "import and export tasks are in queue, there are export tasks({export}), import tasks({import}), please wait": "import and export tasks are in queue, there are export tasks({export}), import tasks({import}), please wait",
-    "import file": "import file",
     "import parameters": "import parameters",
-    "import results": "import results",
     "import source": "import source",
     "import use case": "import use case",
-    "imported {total} item successfully": "imported {total} item successfully",
-    "imported {total} item unsuccessfully": "imported {total} item unsuccessfully",
     "include existing tasks": "include existing tasks",
     "included tasks": "included tasks",
     "informal": "informal",
@@ -2001,6 +1994,7 @@
     "ComponentInfo": "ComponentInfo",
     "DNS parsing times": "DNS parsing times",
     "Database call": "Database call",
+    "DevOps": "DevOps",
     "DevOps Project": "DevOps Project",
     "Erda service": "Erda service",
     "ErrorInsight": "ErrorInsight",
