--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -86,6 +86,7 @@
     "Memory quota": "内存配额",
     "Memory quota usage": "内存配额使用",
     "Memory usage": "内存使用",
+    "Monitor": "监控",
     "Monitor Project": "监控项目",
     "Monthly": "每月",
     "MySQL Erda database": "MySQL Erda数据库名",
@@ -1130,7 +1131,6 @@
     "confirm to delete Runtime": "确认删除Runtime",
     "confirm to delete configuration": "确认删除配置",
     "confirm to delete?": "确定删除吗?",
-    "confirm to export": "确认导出",
     "confirm to remove the quote?": "确定移除引用吗?",
     "connect to Coding": "链接Coding",
     "connect to {type}": "链接{type}仓库",
@@ -1220,7 +1220,6 @@
     "document is illegal": "文档不合法",
     "does not belong to": "不属于",
     "does not contain": "不包含",
-    "download failed file": "下载失败文件",
     "download tar.gz": "下载tar.gz",
     "download template": "下载模板",
     "download zip": "下载zip",
@@ -1273,14 +1272,14 @@
     "existence": "存在",
     "existing application": "已有应用",
     "expand file": "展开文件",
-    "export/import": "导出/导入",
+    "export Excel": "导出Excel",
+    "export Xmind": "导出Xmind",
     "export all": "全部导出",
     "export all data": "将全部数据进行导出",
     "export by filter condition": "按筛选条件导出",
-    "export Excel": "导出Excel",
-    "export Xmind": "导出Xmind",
     "export report": "导出报告",
     "export the data of the filter conditions": "将筛选器过滤条件后的数据进行导出",
+    "export/import": "导出/导入",
     "exporting": "正在导出",
     "exposed port": "暴露端口",
     "external api": "外部API",
@@ -1310,7 +1309,6 @@
     "filter by data source name": "通过数据源名称过滤",
     "filter by priority": "使用优先级过滤",
     "filter condition": "过滤条件",
-    "filter criteria are not saved": "未保存筛选条件",
     "filter name": "筛选器名称",
     "folder is created successfully": "创建文件夹成功",
     "follow": "关注",
@@ -1343,14 +1341,9 @@
     "image name": "镜像名称",
     "image processing": "图像处理",
     "images list": "镜像列表",
-    "import and export tasks are in queue, there are export tasks({export}), import tasks({import}), please wait": "导入导出任务正在排队中，前面还有导出任务({export})，导入任务({import})，请等待",
-    "import file": "导入文件",
     "import parameters": "导入参数",
-    "import results": "导入结果",
     "import source": "引入源",
     "import use case": "引入用例",
-    "imported {total} item successfully": "导入成功{total}条",
-    "imported {total} item unsuccessfully": "导入失败{total}条",
     "include existing tasks": "包含已有任务",
     "included tasks": "包含的任务",
     "informal": "非正式",
@@ -2001,6 +1994,7 @@
     "ComponentInfo": "组件信息",
     "DNS parsing times": "DNS解析次数",
     "Database call": "数据库调用",
+    "DevOps": "__NOT_TRANSLATED__",
     "DevOps Project": "研发项目",
     "Erda service": "Erda服务",
     "ErrorInsight": "错误分析",
