--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1994,7 +1994,7 @@
     "ComponentInfo": "组件信息",
     "DNS parsing times": "DNS解析次数",
     "Database call": "数据库调用",
-    "DevOps": "__NOT_TRANSLATED__",
+    "DevOps": "研发",
     "DevOps Project": "研发项目",
     "Erda service": "Erda服务",
     "ErrorInsight": "错误分析",
