feat(dop): project release add group

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1081,6 +1081,7 @@
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
     "click this area to browse and upload": "click this area to browse and upload",
+    "click to add application release": "click to add application release",
     "click to add URL path": "click to add URL path",
     "click to edit": "click to edit",
     "click to expand": "click to expand",
@@ -1292,6 +1293,7 @@
     "failed to delete branch": "failed to delete branch",
     "failed to delete tag": "failed to delete tag",
     "field name": "field name",
+    "fifth": "fifth",
     "file created successfully": "file created successfully",
     "file deleted successfully": "file deleted successfully",
     "file directory": "file directory",
@@ -1310,10 +1312,12 @@
     "filter by priority": "filter by priority",
     "filter condition": "filter condition",
     "filter name": "filter name",
+    "first": "first",
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
     "formal": "formal",
     "four parameter references": "1. Input parameter reference for this scene: / $<< params.lab >>, and lab is input parameter name of the scene; 2. Output parameter reference for the front interface: / $<< outputs.10.status >>, and 10 is the interface ID, status is the output parameter name; 3. Mock parameter reference: / $<< random.string >>, and string is a function to randomly generate a string (includes integer, float, boolean, upper, lower, etc.); 4. Global environment variable reference: / $<< configs.autotest.cluster-name >>, and cluster-name is the environment variable name.",
+    "fourth": "fourth",
     "gantt chart": "gantt chart",
     "general ability": "general ability",
     "general settings": "general settings",
@@ -1322,6 +1326,7 @@
     "greater than or equal to": "greater than or equal to",
     "greater than, greater than or equal to, less than, less than or equal to": "Greater than, Greater than or equal, Less than, Less than or equal",
     "group address": "group address",
+    "group": "group",
     "grouping": "grouping",
     "have conflict": "have conflict",
     "have merged": "merged",
@@ -1414,6 +1419,7 @@
     "low": "low",
     "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.": "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.",
     "manage all project labels": "manage all project labels",
+    "manage the group of releases": "manage the group of releases",
     "manual test": "manual test",
     "maximum number of loop": "maximum number of loop",
     "maximum time consuming": "maximum time consuming",
@@ -1491,6 +1497,7 @@
     "no matching data": "no matching data",
     "no member is concerned about it": "no member is concerned about it",
     "no more than 30 characters": "no more than 30 characters",
+    "no releases have been selected yet": "no releases have been selected yet",
     "no time logged": "no time logged",
     "no {name}": "no {name}",
     "node params": "node params",
@@ -1733,6 +1740,7 @@
     "search for": "search for",
     "search label under project": "search label under project",
     "searchCenter": "searchCenter",
+    "second": "second",
     "security": "security",
     "select a business domain": "select a business domain",
     "select a document": "select a document",
@@ -1862,10 +1870,12 @@
     "the project name displayed on the Erda platform, supports Chinese characters": "The name displayed on the Erda platform, supports Chinese naming",
     "the start date cannot be later than the end date": "the start date cannot be later than the end date",
     "the use case will not be recovered after it is completely deleted, ": "the use case will not be recovered after it is completely deleted, ",
+    "the {index} group": "the {index} group",
     "the {index} step in the steps and results is not completed": "the {index} step in the steps and results is not completed",
     "there are duplicates in the {index} interface": "there are duplicates in the {index} interface",
     "there is a new import case, click to refresh the list": "there is a new import case, click to refresh the list",
     "there is no need to export": "there is no need to export",
+    "third": "third",
     "third service": "third service",
     "this is mainly for items that have not been scheduled for a specific iteration": "this is mainly for items that have not been scheduled for a specific iteration",
     "this item cannot be empty": "this item cannot be empty",
