--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1081,6 +1081,7 @@
     "circulation setting": "流转设置",
     "class catalog": "类目录",
     "click this area to browse and upload": "点击此区域进行浏览上传",
+    "click to add application release": "点击添加应用制品",
     "click to add URL path": "点击添加 URL",
     "click to edit": "点击即可编辑",
     "click to expand": "点击展开",
@@ -1292,6 +1293,7 @@
     "failed to delete branch": "删除分支失败",
     "failed to delete tag": "删除标签失败",
     "field name": "字段名",
+    "fifth": "五",
     "file created successfully": "新建文件成功",
     "file deleted successfully": "删除文件成功",
     "file directory": "文件目录",
@@ -1310,10 +1312,12 @@
     "filter by priority": "使用优先级过滤",
     "filter condition": "过滤条件",
     "filter name": "筛选器名称",
+    "first": "一",
     "folder is created successfully": "创建文件夹成功",
     "follow": "关注",
     "formal": "正式",
     "four parameter references": "1. 本场景的入参引用方法：/ $<< params.lab >>，其中 lab 为场景入参名;2. 前置接口出参引用方法：/ $<< outputs.10.status >>，其中 10 为接口 ID，status 为出参名称;3. mock 参数引用方法：/ $<< random.string >>， 其中 string 为随机生成字符串的函数（还包含 integer、float、boolean、upper、lower等）;4. 全局环境变量的引用方法：/ $<< configs.autotest.cluster-name >>，其中 cluster-name 为环境变量名",
+    "fourth": "四",
     "gantt chart": "甘特图",
     "general ability": "通用能力",
     "general settings": "通用设置",
@@ -1322,6 +1326,7 @@
     "greater than or equal to": "大于等于",
     "greater than, greater than or equal to, less than, less than or equal to": "大于、大于等于、小于、小于等于",
     "group address": "群组地址",
+    "group": "组",
     "grouping": "分组",
     "have conflict": "有冲突",
     "have merged": "已合并",
@@ -1414,6 +1419,7 @@
     "low": "一般",
     "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.": "主要管理事项字段属性的自定义配置，保存为整个组织级项目的事项模板配置。",
     "manage all project labels": "管理所有项目标签",
+    "manage the group of releases": "管理该组制品",
     "manual test": "手动测试",
     "maximum number of loop": "最大循环次数",
     "maximum time consuming": "最大耗时",
@@ -1491,6 +1497,7 @@
     "no matching data": "无匹配数据",
     "no member is concerned about it": "暂无成员关注",
     "no more than 30 characters": "不超过30个字符",
+    "no releases have been selected yet": "暂未选择任何制品",
     "no time logged": "无记录的时间",
     "no {name}": "暂无{name}",
     "node params": "节点入参",
@@ -1733,6 +1740,7 @@
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
     "searchCenter": "搜索中心",
+    "second": "二",
     "security": "安全",
     "select a business domain": "选择业务域",
     "select a document": "选择文件",
@@ -1862,10 +1870,12 @@
     "the project name displayed on the Erda platform, supports Chinese characters": "项目在 Erda 平台中显示的名称，支持中文命名",
     "the start date cannot be later than the end date": "开始日期不能晚于结束日期",
     "the use case will not be recovered after it is completely deleted, ": "彻底删除后用例将无法恢复",
+    "the {index} group": "第{index}组",
     "the {index} step in the steps and results is not completed": "步骤及结果中第 {index} 步未填写完整",
     "there are duplicates in the {index} interface": "第 {index} 个接口中有出参名重复",
     "there is a new import case, click to refresh the list": "有新导入用例，点击刷新列表",
     "there is no need to export": "没有需要导出的",
+    "third": "三",
     "third service": "三方服务",
     "this is mainly for items that have not been scheduled for a specific iteration": "此处主要存放未安排到具体迭代的事项",
     "this item cannot be empty": "该项不能为空",
