feat: code optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1293,7 +1293,6 @@
     "failed to delete branch": "failed to delete branch",
     "failed to delete tag": "failed to delete tag",
     "field name": "field name",
-    "fifth": "fifth",
     "file created successfully": "file created successfully",
     "file deleted successfully": "file deleted successfully",
     "file directory": "file directory",
@@ -1312,12 +1311,10 @@
     "filter by priority": "filter by priority",
     "filter condition": "filter condition",
     "filter name": "filter name",
-    "first": "first",
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
     "formal": "formal",
     "four parameter references": "1. Input parameter reference for this scene: / $<< params.lab >>, and lab is input parameter name of the scene; 2. Output parameter reference for the front interface: / $<< outputs.10.status >>, and 10 is the interface ID, status is the output parameter name; 3. Mock parameter reference: / $<< random.string >>, and string is a function to randomly generate a string (includes integer, float, boolean, upper, lower, etc.); 4. Global environment variable reference: / $<< configs.autotest.cluster-name >>, and cluster-name is the environment variable name.",
-    "fourth": "fourth",
     "gantt chart": "gantt chart",
     "general ability": "general ability",
     "general settings": "general settings",
@@ -1327,6 +1324,7 @@
     "greater than, greater than or equal to, less than, less than or equal to": "Greater than, Greater than or equal, Less than, Less than or equal",
     "group address": "group address",
     "group": "group",
+    "group {index}": "group {index}",
     "grouping": "grouping",
     "have conflict": "have conflict",
     "have merged": "merged",
@@ -1740,7 +1738,6 @@
     "search for": "search for",
     "search label under project": "search label under project",
     "searchCenter": "searchCenter",
-    "second": "second",
     "security": "security",
     "select a business domain": "select a business domain",
     "select a document": "select a document",
@@ -1871,12 +1868,10 @@
     "the project name displayed on the Erda platform, supports Chinese characters": "The name displayed on the Erda platform, supports Chinese naming",
     "the start date cannot be later than the end date": "the start date cannot be later than the end date",
     "the use case will not be recovered after it is completely deleted, ": "the use case will not be recovered after it is completely deleted, ",
-    "the {index} group": "the {index} group",
     "the {index} step in the steps and results is not completed": "the {index} step in the steps and results is not completed",
     "there are duplicates in the {index} interface": "there are duplicates in the {index} interface",
     "there is a new import case, click to refresh the list": "there is a new import case, click to refresh the list",
     "there is no need to export": "there is no need to export",
-    "third": "third",
     "third service": "third service",
     "this is mainly for items that have not been scheduled for a specific iteration": "this is mainly for items that have not been scheduled for a specific iteration",
     "this item cannot be empty": "this item cannot be empty",
