feat(dop): project release add group (#2898)
* feat(dop): project release add group

* feat: code optimization

* feat: code optimization

* feat: code optimization

* feat: add group delete button

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1081,6 +1081,7 @@
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
     "click this area to browse and upload": "click this area to browse and upload",
+    "click to add application release": "click to add application release",
     "click to add URL path": "click to add URL path",
     "click to edit": "click to edit",
     "click to expand": "click to expand",
@@ -1322,6 +1323,8 @@
     "greater than or equal to": "greater than or equal to",
     "greater than, greater than or equal to, less than, less than or equal to": "Greater than, Greater than or equal, Less than, Less than or equal",
     "group address": "group address",
+    "group": "group",
+    "group {index}": "group {index}",
     "grouping": "grouping",
     "have conflict": "have conflict",
     "have merged": "merged",
@@ -1414,6 +1417,7 @@
     "low": "low",
     "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.": "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.",
     "manage all project labels": "manage all project labels",
+    "manage the group of releases": "manage the group of releases",
     "manual test": "manual test",
     "maximum number of loop": "maximum number of loop",
     "maximum time consuming": "maximum time consuming",
@@ -1491,6 +1495,7 @@
     "no matching data": "no matching data",
     "no member is concerned about it": "no member is concerned about it",
     "no more than 30 characters": "no more than 30 characters",
+    "no releases have been selected yet": "no releases have been selected yet",
     "no time logged": "no time logged",
     "no {name}": "no {name}",
     "node params": "node params",
@@ -1741,6 +1746,7 @@
     "select apps create": "select apps create",
     "select data domain": "select data domain",
     "select file create": "select file create",
+    "selected from {name}": "selected from {name}",
     "select group": "select group",
     "select instance": "select instance",
     "select iteration": "select iteration",
