fix(dop): project release group add bug

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1746,7 +1746,6 @@
     "select apps create": "select apps create",
     "select data domain": "select data domain",
     "select file create": "select file create",
-    "selected from {name}": "selected from {name}",
     "select group": "select group",
     "select instance": "select instance",
     "select iteration": "select iteration",
@@ -1850,6 +1849,7 @@
     "test summary": "test summary",
     "testing": "testing",
     "the alarm strategy will be permanently deleted": "the alarm strategy will be permanently deleted",
+    "this application already has release selected in {name}": "this application already has release selected in {name}",
     "the current action does not exist, please re-select!": "the current action does not exist, please re-select!",
     "the current input content is invalid JSON": "the current input content is invalid JSON",
     "the current instance does not exist, please add it again!": "the current instance does not exist, please add it again!",
