--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1746,7 +1746,6 @@
     "select apps create": "选择应用创建",
     "select data domain": "选择数据域",
     "select file create": "选择文件创建",
-    "selected from {name}": "已在{name}中选择",
     "select group": "选择群组",
     "select instance": "选择实例",
     "select iteration": "选择迭代",
@@ -1850,6 +1849,7 @@
     "test summary": "测试总结",
     "testing": "测试中",
     "the alarm strategy will be permanently deleted": "该告警策略将被永久删除",
+    "this application already has release selected in {name}": "该应用已有制品在{name}中被选择",
     "the current action does not exist, please re-select!": "当前 Action 不存在，请重新选择！",
     "the current input content is invalid JSON": "当前输入内容为无效 JSON",
     "the current instance does not exist, please add it again!": "当前实例不存在，请重新添加！",
