feat(msp): adjust alarm router

--- a/locales/en.json
+++ b/locales/en.json
@@ -199,6 +199,7 @@
     "advanced search": "advanced search",
     "advanced settings": "advanced settings",
     "agree": "agree",
+    "alarm config": "alarm config",
     "alarm data report": "alarm data report",
     "alarm overview": "alarm overview",
     "alarm record": "alarm record",
@@ -630,6 +631,7 @@
     "notice-channel-desc": "There can only be one open channel under the same type, and the active channel will be used to send notification messages of the corresponding type",
     "notification": "notification",
     "notification channel": "notification channel",
+    "notification group management": "notification group management",
     "notification method": "notification method",
     "notification target": "notification target",
     "number": "number",
@@ -808,6 +810,7 @@
     "role": "role",
     "role permissions description": "role permissions description",
     "rolled back": "rolled back",
+    "rule management": "rule management",
     "running": "running",
     "running environment": "running environment",
     "runtime configs": "runtime configs",
