--- a/locales/zh.json
+++ b/locales/zh.json
@@ -199,6 +199,7 @@
     "advanced search": "高级搜索",
     "advanced settings": "高级设置",
     "agree": "同意",
+    "alarm config": "告警配置",
     "alarm data report": "告警数据报表",
     "alarm overview": "告警总览",
     "alarm record": "告警列表",
@@ -630,6 +631,7 @@
     "notice-channel-desc": "同一类型下只能有一个开启的渠道，启用中的渠道将用于发送对应类型的通知消息",
     "notification": "通知",
     "notification channel": "通知渠道",
+    "notification group management": "通知组管理",
     "notification method": "通知方式",
     "notification target": "通知对象",
     "number": "数字",
@@ -808,6 +810,7 @@
     "role": "角色",
     "role permissions description": "角色权限说明",
     "rolled back": "已回滚",
+    "rule management": "规则管理",
     "running": "运行中",
     "running environment": "运行环境",
     "runtime configs": "Runtime配置",
